removed another elements

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -75,7 +75,7 @@
 							<h2 class="title">{{ event.title }}</h2>
 							<p class="desc">{{ event.intro }}</p>
 							<ul>
-								<li style="width:50%;"><a href="#/home/{{event.$id}}" ng-click=""><span class="fa fa-globe"></span> Подробиці</a></li><!-- href="#/home/{{event.title}}" -->
+								<li style="width:50%;"><a href="#/home/{{event.$id}}" ng-click=""><span class="fa fa-globe"></span> Подробиці</a></li>
 								<li style="width:50%;"><span class="fa fa-money"></span> Вільний</li>
 							</ul>
 						</div>
@@ -96,18 +96,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h3>МИ ДОКЛАДАЄМО ВСІХ ЗУСИЛЬ <bold>ЩОБ ДОСТИГНУТИ ВИСОКОЇ ЯКОСТІ ОБСЛУГОВУВАННЯ</bold>. НАША МЕТА ПОЛЯГАЄ У ВАШОМУ ПОВНОМУ <bold>ЗАДОВОЛЕННІ</bold>.
-
+				<h3>Ми докладаємо всіх зусиль <bold>щоб достигнути високої якості обслуговування</bold>. наша мета полягає у вашому повному<bold> задоволенні</bold>.
 				</h3>
 				</div>
 			</div>
-		</div><!-- /container -->
-	</div><!-- /w -->
-
-	<!-- WITH THE SUPPORT -->
-	<div id="w">
-		<div class="container">
-			<div class="row">
+			<!--<div class="row">
 				<h3 style="color:#f85c37">ЗА ПІДТРИМКИ</h3>
 				 <div class="col-lg-3 team">
 					<a href="http://www.lit.dp.ua/?rid=2&cont=news"><img src="assets/img/sup3.jpg" ></a>
@@ -124,9 +117,16 @@
 				 <div class="col-lg-3 team">
 					<a href="http://www.lit.dp.ua/?rid=2&cont=news"><img src="assets/img/sup2.jpg" ></a>
 				 </div>
-			</div>
+			</div> -->
+		</div><!-- /container -->
+	</div><!-- /w -->
+
+	<!-- WITH THE SUPPORT -->
+<!-- 	<div id="w">
+		<div class="container">
+			
 		</div>
-	</div>
+	</div> -->
 
 	
 	<!-- ========== ABOUT - GREY SECTION ========== -->
@@ -135,19 +135,11 @@
 		<div class="container">
 			<div class="row">
 
-				<h3 style="color:#f85c37">O NUMO</h3>
+				<h3 style="color:#f85c37"><b>NUMO</b> команда</h3>
 				<br>
 				<br>
 				<div class="col-lg-2"></div>
 				<div class="col-lg-8">
-				<p>1. Comfortable workplaces for a productive and creative atmosphere for you and your team. <br>
-					2. Separate areas for brainstorming and discussing ideas. <br>
-					3. A space for relaxing and having leisurely conversations with like-minded people.<br>
-					4. AND FINALLY! There are trainings, workshops, hackathons, and many more incredible events.<br>
-					340 square meters in the heart of Dnipropetrovsk will be a place for personal and professional development, which is open to everyone!
-				</p>
-				<br>
-				<br>
 				</div>
 				<div class="col-lg-2"></div>
 				<div class="row">
@@ -204,13 +196,13 @@
 					<br>
 					<div class="col-lg-4">
 						<h3><b>Send Us A Message:</b></h3>
-						<h3>mmail@smtp.com</h3>
+						<h3>ukhlin@rc.dnepredu.dp.ua</h3>
 						<br>
 					</div>
 					
 					<div class="col-lg-4">	
 						<h3><b>Call Us:</b></h3>
-						<h3>+55 3984-4389</h3>
+						<h3>+380675654864</h3>
 						<br>
 					</div>
 					
